--- a/README.rdoc
+++ b/README.rdoc
@@ -8,6 +8,16 @@ This is an extraction of the `auto_link` method from rails.  The `auto_link`
 method was removed from Rails in version Rails 3.1.  This gem is meant to
 bridge the gap for people migrating.
 
+
+== NEW FEATURE:
+
+    post_body = "Welcome to my new blog at http://www.myblog.com/.  Please e-mail me at me@email.com."
+    auto_link(post_body, :html => { :target => '_blank' }) do |url|
+      'http://creww.me/jump?url=' + url
+    end
+    # => "Welcome to my new blog at <a href=\"http://creww.me/jump?url=http://www.myblog.com/\" target=\"_blank\">http://www.myblog.com/</a>.
+
+
 == FEATURES:
 
 By default auto_link returns sanitized html_safe strings.
@@ -35,11 +45,13 @@ This behaviour can be overridden by setting the <tt>:sanitize</tt> option to fal
     auto_link("Go to http://www.rubyonrails.org <script>alert('Script!')</script>", :sanitize => false)
     # => "Go to <a href=\"http://www.rubyonrails.org\">http://www.rubyonrails.org</a> <script>alert('Script!')</script>"
 
+    ### this will not work.
     post_body = "Welcome to my new blog at http://www.myblog.com/.  Please e-mail me at me@email.com."
     auto_link(post_body, :html => { :target => '_blank' }) do |text|
       truncate(text, :length => 15)
     end
     # => "Welcome to my new blog at <a href=\"http://www.myblog.com/\" target=\"_blank\">http://www.m...</a>.
+
 
 == REQUIREMENTS:
 
